--- a/index.html
+++ b/index.html
@@ -2191,7 +2191,7 @@
       ></script>
       <script
         type="text/javascript"
-        src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"
+        src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"
       ></script>
 
       <!-- Google Map -->
